# snake-3d-rs

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  gotchas  package-lock.json  package.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
js/: bootstrap.js
src/: game.rs  lib.rs
src/actions/: control_actions.rs  cube_actions.rs  game_actions.rs  mod.rs  snake_actions.rs
src/drawers/: cube_side_drawer.rs  mod.rs  scene_drawer.rs
src/drawers/cube_drawer/: mod.rs
src/drawers/cube_drawer/geometry/: cube_side_coords_range.rs  cube_texture_coords.rs  cube_vertex_coords.rs  mod.rs
src/helpers/: canvas.rs  cube.rs  direction.rs  dom.rs  graphics_math.rs  mod.rs  raf.rs  ranges.rs  webgl.rs
src/models/: camera_mode.rs  cube.rs  cube_position.rs  cube_side.rs  cube_side_type.rs  degrees.rs  direction.rs  game_state.rs  game_status.rs  grid.rs  mod.rs  model_rotation.rs  point_2d.rs  point_3d.rs  radians.rs  range.rs  scene.rs  snake.rs
static/: index.html
