[package]
name = "snake-3d-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# enable link time optimization feature of llvm
# https://llvm.org/docs/LinkTimeOptimization.html
# it makes compilation slower, but eg. removes dead code
lto = true

[features]

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "MouseEvent",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlBuffer",
  "WebGlTexture",
]
