[package]
name = "snake-3d-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# enable link time optimization feature of llvm
# https://llvm.org/docs/LinkTimeOptimization.html
# it makes compilation slower, but eg. removes dead code
lto = true

[package.metadata.wasm-pack.profile.profiling]
# preserve func names https://github.com/rustwasm/wasm-pack/issues/797
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.55"
lazy_static = "1.4.0"
num-traits = "0.2.14"
num-derive = "0.3.3"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
  "KeyboardEvent",
  "MouseEvent",
  "Performance",
  "CanvasRenderingContext2d",
  "TextMetrics",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlBuffer",
  "WebGlTexture",
]
